feat: expose box-shadows as CSS variables

--- a/composed-variables/composed-variables.scss
+++ b/composed-variables/composed-variables.scss
@@ -175,150 +175,89 @@ $theme: 'standard' !default;
   --sbb-shadow-color-hard-1-negative: color-mix(in srgb, var(--sbb-color-black) 30%, transparent);
   --sbb-shadow-color-hard-2-negative: color-mix(in srgb, var(--sbb-color-black) 40%, transparent);
 
+  --sbb-shadow-level-3-shadow-1: var(--sbb-shadow-elevation-level-3-shadow-1-offset-x)
+    var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
+    var(--sbb-shadow-elevation-level-3-shadow-1-blur)
+    var(--sbb-shadow-elevation-level-3-shadow-1-spread);
+  --sbb-shadow-level-3-shadow-2: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
+    var(--sbb-shadow-elevation-level-3-shadow-2-offset-y)
+    var(--sbb-shadow-elevation-level-3-shadow-2-blur)
+    var(--sbb-shadow-elevation-level-3-shadow-2-spread);
   --sbb-box-shadow-level-3-soft:
-    var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-shadow-color-soft-2),
-    var(--sbb-shadow-elevation-level-3-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-1-spread) var(--sbb-shadow-color-soft-1);
+    var(--sbb-shadow-level-3-shadow-2) var(--sbb-shadow-color-soft-2),
+    var(--sbb-shadow-level-3-shadow-1) var(--sbb-shadow-color-soft-1);
   --sbb-box-shadow-level-3-soft-negative:
-    var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-shadow-color-soft-2-negative),
-    var(--sbb-shadow-elevation-level-3-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-1-spread) var(--sbb-shadow-color-soft-1-negative);
+    var(--sbb-shadow-level-3-shadow-2) var(--sbb-shadow-color-soft-2-negative),
+    var(--sbb-shadow-level-3-shadow-1) var(--sbb-shadow-color-soft-1-negative);
   --sbb-box-shadow-level-3-hard:
-    var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-shadow-color-hard-2),
-    var(--sbb-shadow-elevation-level-3-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-1-spread) var(--sbb-shadow-color-hard-1);
+    var(--sbb-shadow-level-3-shadow-2) var(--sbb-shadow-color-hard-2),
+    var(--sbb-shadow-level-3-shadow-1) var(--sbb-shadow-color-hard-1);
   --sbb-box-shadow-level-3-hard-negative:
-    var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-shadow-color-hard-2-negative),
-    var(--sbb-shadow-elevation-level-3-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-3-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-3-shadow-1-spread) var(--sbb-shadow-color-hard-1-negative);
+    var(--sbb-shadow-level-3-shadow-2) var(--sbb-shadow-color-hard-2-negative),
+    var(--sbb-shadow-level-3-shadow-1) var(--sbb-shadow-color-hard-1-negative);
+
+  --sbb-shadow-level-5-shadow-1: var(--sbb-shadow-elevation-level-5-shadow-1-offset-x)
+    var(--sbb-shadow-elevation-level-5-shadow-1-offset-y)
+    var(--sbb-shadow-elevation-level-5-shadow-1-blur)
+    var(--sbb-shadow-elevation-level-5-shadow-1-spread);
+  --sbb-shadow-level-5-shadow-2: var(--sbb-shadow-elevation-level-5-shadow-2-offset-x)
+    var(--sbb-shadow-elevation-level-5-shadow-2-offset-y)
+    var(--sbb-shadow-elevation-level-5-shadow-2-blur)
+    var(--sbb-shadow-elevation-level-5-shadow-2-spread);
   --sbb-box-shadow-level-5-soft:
-    var(--sbb-shadow-elevation-level-5-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-2-spread) var(--sbb-shadow-color-soft-2),
-    var(--sbb-shadow-elevation-level-5-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-1-spread) var(--sbb-shadow-color-soft-1);
+    var(--sbb-shadow-level-5-shadow-2) var(--sbb-shadow-color-soft-2),
+    var(--sbb-shadow-level-5-shadow-1) var(--sbb-shadow-color-soft-1);
   --sbb-box-shadow-level-5-soft-negative:
-    var(--sbb-shadow-elevation-level-5-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-2-spread) var(--sbb-shadow-color-soft-2-negative),
-    var(--sbb-shadow-elevation-level-5-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-1-spread) var(--sbb-shadow-color-soft-1-negative);
+    var(--sbb-shadow-level-5-shadow-2) var(--sbb-shadow-color-soft-2-negative),
+    var(--sbb-shadow-level-5-shadow-1) var(--sbb-shadow-color-soft-1-negative);
   --sbb-box-shadow-level-5-hard:
-    var(--sbb-shadow-elevation-level-5-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-2-spread) var(--sbb-shadow-color-hard-2),
-    var(--sbb-shadow-elevation-level-5-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-1-spread) var(--sbb-shadow-color-hard-1);
+    var(--sbb-shadow-level-5-shadow-2) var(--sbb-shadow-color-hard-2),
+    var(--sbb-shadow-level-5-shadow-1) var(--sbb-shadow-color-hard-1);
   --sbb-box-shadow-level-5-hard-negative:
-    var(--sbb-shadow-elevation-level-5-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-2-spread) var(--sbb-shadow-color-hard-2-negative),
-    var(--sbb-shadow-elevation-level-5-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-5-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-5-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-5-shadow-1-spread) var(--sbb-shadow-color-hard-1-negative);
+    var(--sbb-shadow-level-5-shadow-2) var(--sbb-shadow-color-hard-2-negative),
+    var(--sbb-shadow-level-5-shadow-1) var(--sbb-shadow-color-hard-1-negative);
+
+  --sbb-shadow-level-9-shadow-1: var(--sbb-shadow-elevation-level-9-shadow-1-offset-x)
+    var(--sbb-shadow-elevation-level-9-shadow-1-offset-y)
+    var(--sbb-shadow-elevation-level-9-shadow-1-blur)
+    var(--sbb-shadow-elevation-level-9-shadow-1-spread);
+  --sbb-shadow-level-9-shadow-2: var(--sbb-shadow-elevation-level-9-shadow-2-offset-x)
+    var(--sbb-shadow-elevation-level-9-shadow-2-offset-y)
+    var(--sbb-shadow-elevation-level-9-shadow-2-blur)
+    var(--sbb-shadow-elevation-level-9-shadow-2-spread);
   --sbb-box-shadow-level-9-soft:
-    var(--sbb-shadow-elevation-level-9-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-2-spread) var(--sbb-shadow-color-soft-2),
-    var(--sbb-shadow-elevation-level-9-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-1-spread) var(--sbb-shadow-color-soft-1);
+    var(--sbb-shadow-level-9-shadow-2) var(--sbb-shadow-color-soft-2),
+    var(--sbb-shadow-level-9-shadow-1) var(--sbb-shadow-color-soft-1);
   --sbb-box-shadow-level-9-soft-negative:
-    var(--sbb-shadow-elevation-level-9-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-2-spread) var(--sbb-shadow-color-soft-2-negative),
-    var(--sbb-shadow-elevation-level-9-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-1-spread) var(--sbb-shadow-color-soft-1-negative);
+    var(--sbb-shadow-level-9-shadow-2) var(--sbb-shadow-color-soft-2-negative),
+    var(--sbb-shadow-level-9-shadow-1) var(--sbb-shadow-color-soft-1-negative);
   --sbb-box-shadow-level-9-hard:
-    var(--sbb-shadow-elevation-level-9-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-2-spread) var(--sbb-shadow-color-hard-2),
-    var(--sbb-shadow-elevation-level-9-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-1-spread) var(--sbb-shadow-color-hard-1);
+    var(--sbb-shadow-level-9-shadow-2) var(--sbb-shadow-color-hard-2),
+    var(--sbb-shadow-level-9-shadow-1) var(--sbb-shadow-color-hard-1);
   --sbb-box-shadow-level-9-hard-negative:
-    var(--sbb-shadow-elevation-level-9-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-2-spread) var(--sbb-shadow-color-hard-2-negative),
-    var(--sbb-shadow-elevation-level-9-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-9-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-9-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-9-shadow-1-spread) var(--sbb-shadow-color-hard-1-negative);
+    var(--sbb-shadow-level-9-shadow-2) var(--sbb-shadow-color-hard-2-negative),
+    var(--sbb-shadow-level-9-shadow-1) var(--sbb-shadow-color-hard-1-negative);
+
+  --sbb-shadow-level-11-shadow-1: var(--sbb-shadow-elevation-level-11-shadow-1-offset-x)
+    var(--sbb-shadow-elevation-level-11-shadow-1-offset-y)
+    var(--sbb-shadow-elevation-level-11-shadow-1-blur)
+    var(--sbb-shadow-elevation-level-11-shadow-1-spread);
+  --sbb-shadow-level-11-shadow-2: var(--sbb-shadow-elevation-level-11-shadow-2-offset-x)
+    var(--sbb-shadow-elevation-level-11-shadow-2-offset-y)
+    var(--sbb-shadow-elevation-level-11-shadow-2-blur)
+    var(--sbb-shadow-elevation-level-11-shadow-2-spread);
   --sbb-box-shadow-level-11-soft:
-    var(--sbb-shadow-elevation-level-11-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-2-spread) var(--sbb-shadow-color-soft-2),
-    var(--sbb-shadow-elevation-level-11-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-1-spread) var(--sbb-shadow-color-soft-1);
+    var(--sbb-shadow-level-11-shadow-2) var(--sbb-shadow-color-soft-2),
+    var(--sbb-shadow-level-11-shadow-1) var(--sbb-shadow-color-soft-1);
   --sbb-box-shadow-level-11-soft-negative:
-    var(--sbb-shadow-elevation-level-11-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-2-spread) var(--sbb-shadow-color-soft-2-negative),
-    var(--sbb-shadow-elevation-level-11-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-1-spread) var(--sbb-shadow-color-soft-1-negative);
+    var(--sbb-shadow-level-11-shadow-2) var(--sbb-shadow-color-soft-2-negative),
+    var(--sbb-shadow-level-11-shadow-1) var(--sbb-shadow-color-soft-1-negative);
   --sbb-box-shadow-level-11-hard:
-    var(--sbb-shadow-elevation-level-11-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-2-spread) var(--sbb-shadow-color-hard-2),
-    var(--sbb-shadow-elevation-level-11-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-1-spread) var(--sbb-shadow-color-hard-1);
+    var(--sbb-shadow-level-11-shadow-2) var(--sbb-shadow-color-hard-2),
+    var(--sbb-shadow-level-11-shadow-1) var(--sbb-shadow-color-hard-1);
   --sbb-box-shadow-level-11-hard-negative:
-    var(--sbb-shadow-elevation-level-11-shadow-2-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-2-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-2-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-2-spread) var(--sbb-shadow-color-hard-2-negative),
-    var(--sbb-shadow-elevation-level-11-shadow-1-offset-x)
-      var(--sbb-shadow-elevation-level-11-shadow-1-offset-y)
-      var(--sbb-shadow-elevation-level-11-shadow-1-blur)
-      var(--sbb-shadow-elevation-level-11-shadow-1-spread) var(--sbb-shadow-color-hard-1-negative);
+    var(--sbb-shadow-level-11-shadow-2) var(--sbb-shadow-color-hard-2-negative),
+    var(--sbb-shadow-level-11-shadow-1) var(--sbb-shadow-color-hard-1-negative);
 
   --sbb-font-default-color: var(--sbb-color-2);
 
